Goblin-AI Application [Quasar] (modify lots of files) by kt.kim

--- a/application/quasar/index.html
+++ b/application/quasar/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="shortcut icon" href="/static/ico_logo.ico" type="image/x-icon">
-    <title>NLP Front :)</title>
+    <title>Goblin-AI Quasar</title>
 </head>
 <body>
 <div id="app-sidebar"></div>
